Move Support link from header nav to footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <a href="#/lab" id="nav-lab">Lab</a>
         <a href="#/compare" id="nav-compare">Battle</a>
         <a href="#/methodology">Methodology</a>
-        <a href="#/support">Support</a>
       </nav>
       <div class="cta">
         <button class="ghost" id="nav-search">Check a Stock</button>
@@ -527,6 +526,9 @@
 
     <footer class="footer">
       <div>ValueCheck · Institutional-grade automated due diligence.</div>
+      <div class="footer-links">
+        <a href="#/support">Support</a>
+      </div>
     </footer>
 
     <script>
